syntax = "proto3";
package proto;

option java_multiple_files = true;
option java_package = "generated";

service ArchiveManagerService {
  rpc ListFiles(ListFilesRequest) returns (ListFilesResponse);
  rpc GetArchive(GetArchiveRequest) returns (GetArchiveResponse);
  rpc DeleteArchive(DeleteArchiveRequest) returns (DeleteArchiveResponse);
  rpc ListChildren(ListChildrenRequest) returns (ListChildrenResponse);
  rpc SendArchive(SendArchiveRequest) returns (SendArchiveResponse);
  rpc Pwd(PwdRequest) returns (PwdResponse);
  rpc ChangeDirectoryUp(ChangeDirectoryUpRequest) returns (ChangeDirectoryUpResponse);
  rpc ChangeDirectoryDown(ChangeDirectoryDownRequest) returns (ChangeDirectoryDownResponse);
}

message ListFilesRequest {}

message ListFilesResponse {
  repeated string contents = 1;
  string response_message = 2;
}

message GetArchiveRequest {
  string name = 1;
}

message GetArchiveResponse {
  bytes contents = 1;
  string response_message = 2;
}

message DeleteArchiveRequest {
  string name = 1;
}

message DeleteArchiveResponse {
  string response_message = 1;
}

message ListChildrenRequest {
  string name = 1;
}

message ListChildrenResponse {
  repeated string contents = 1;
  string response_message = 2;
}

message SendArchiveRequest {
  string name = 1;
  bytes contents = 2;
}

message SendArchiveResponse {
  string response_message = 1;
}

message PwdRequest {}

message PwdResponse {
  string response_message = 1;
}

message ChangeDirectoryUpRequest {}

message ChangeDirectoryUpResponse {
  string response_message = 1;
}

message ChangeDirectoryDownRequest {
  string name = 1;
}

message ChangeDirectoryDownResponse {
  string response_message = 1;
}

